05-Metal&Traefik/03-Traefik/01-traefik-dash.yml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.techakademi.com`)
      services:
        - kind: TraefikService
          name: api@internal
